<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#207092"
    tools:context=".Singup">

    <RelativeLayout
        android:id="@+id/logocontainer"
        android:layout_width="match_parent"
        android:layout_height="140dp"
        android:background="@color/bleu_light">
        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/sing_up"
            android:textAlignment="center"
            android:textColor="#F5F5F5"
            android:textSize="20sp"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:contentDescription="@string/logo"
            app:srcCompat="@drawable/log1" />

    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="150dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/fullname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:hintEnabled="false">

                <EditText
                    android:id="@+id/editTextTextPersonName"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:autofillHints=""
                    android:drawableStart="@drawable/ic_baseline_person_24"
                    android:drawablePadding="10dp"
                    android:ems="10"
                    android:hint="@string/full_name"
                    android:inputType="textPersonName"
                    android:padding="10dp"
                    android:textColor="#14475D"
                    android:textColorHint="#14475D"
                    tools:ignore="TextContrastCheck" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/emaill"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/fullname"
                android:layout_marginTop="50dp"
                app:hintEnabled="false">

                <EditText
                    android:id="@+id/editTextTextPersonName2"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:autofillHints=""
                    android:drawableStart="@drawable/ic_baseline_email_24"
                    android:drawablePadding="10dp"
                    android:ems="10"
                    android:hint="@string/email"
                    android:inputType="textPersonName"
                    android:padding="10dp"
                    android:textColor="#14475D"
                    android:textColorHint="#FF14475D"
                    tools:ignore="TextContrastCheck" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/pass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/emaill"
                android:layout_marginTop="50dp"
                app:passwordToggleEnabled="true"
                app:hintEnabled="false">

                <EditText
                    android:id="@+id/editTextTextPassword"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:autofillHints=""
                    android:drawableStart="@drawable/ic_baseline_lock_24"
                    android:drawablePadding="10dp"
                    android:ems="10"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:padding="10dp"
                    android:textColor="#14475D"
                    android:textColorHint="#FF14475D" />

            </com.google.android.material.textfield.TextInputLayout>

            <Spinner
                android:id="@+id/spinner"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_below="@id/pass"
                android:layout_marginTop="50dp"
                android:backgroundTint="#D2D2D2"
                android:background="@drawable/bg_spinner"
                android:contentDescription="@string/app_name"
                android:textAlignment="center" />

            <Button
                android:id="@+id/button2"
                android:layout_width="match_parent"
                android:layout_height="58dp"
                android:text="@string/create"
                android:layout_below="@id/spinner"
                android:layout_marginTop="70dp"/>

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/button2"
                android:layout_marginTop="10dp"
                android:layout_centerHorizontal="true"
                android:fontFamily="@font/poppins"
                android:text="@string/already_have_an_account"
                android:textAlignment="center"
                android:textColor="#F5F5F5"
                 />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/textView7"
                android:layout_marginTop="5dp"
                android:layout_centerHorizontal="true"
                android:fontFamily="@font/poppins_bold"
                android:text="@string/login"
                android:textAlignment="center"
                android:textColor="#F5F5F5" />
        </RelativeLayout>
    </ScrollView>










</RelativeLayout>