<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#207092"
    tools:context=".Login">

    <RelativeLayout
        android:id="@+id/logocontainer"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:background="@color/bleu_light">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="228dp"
            android:layout_height="42dp"
            android:contentDescription="@string/logo"
            app:srcCompat="@drawable/log1"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"/>

    </RelativeLayout>

    <ScrollView
        android:id="@+id/scrollv"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="260dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
<!-- ______________________email___________________________ -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                app:hintEnabled="false">
                <EditText
                    android:id="@+id/editTextTextEmailAddress2"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:fontFamily="@font/poppins"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:textColor="#14475D"
                    android:padding="10dp"
                    android:drawableStart="@drawable/ic_baseline_email_24"
                    android:drawablePadding="10dp"
                    android:textColorHint="#14475D"
                    />
            </com.google.android.material.textfield.TextInputLayout>

<!--________________________password________________________ -->

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/email"
                android:layout_marginTop="10dp"
                app:passwordToggleEnabled="true"
                app:hintEnabled="false">
                <EditText
                    android:id="@+id/editTextTextPassword3"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:fontFamily="@font/poppins"
                    android:hint="@string/password2"
                    android:inputType="textPassword"
                    android:textColor="#14475D"
                    android:padding="10dp"
                    android:drawableStart="@drawable/ic_baseline_lock_24"
                    android:drawablePadding="10dp"
                    android:textColorHint="#14475D"
                    />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/forgotpass"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/password"
                android:layout_marginTop="5dp"
                android:layout_alignParentEnd="true"
                android:text="Forgot Password?"
                android:textColor="@color/grayl"/>

            <Button
                android:id="@+id/button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/forgotpass"
                android:layout_marginTop="40dp"
                android:background="@drawable/bshape"
                android:backgroundTint="#003751"
                android:fontFamily="@font/poppins_semibold"
                android:text="LOGIN"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textSize="16sp"
                app:rippleColor="#003751"
                app:strokeColor="#003751"
                />
            <Button
                android:id="@+id/button4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bshape"
                android:layout_below="@id/button"
                android:layout_marginTop="20dp"
                android:backgroundTint="#003751"
                android:fontFamily="@font/poppins_semibold"
                android:text="@string/use_google"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textSize="16sp"
                app:rippleColor="#003751"
                app:strokeColor="#003751"
              />


        </RelativeLayout>
    </ScrollView>


    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:padding="10dp"
        android:fontFamily="@font/poppins"
        android:text="@string/d_ont_have_an_account"
        android:textAlignment="center"
        android:textColor="#F4F4F4"
        tools:layout_editor_absoluteX="179dp"
        tools:layout_editor_absoluteY="726dp" />


</RelativeLayout>